# lada

./: .gitignore  .gitmodules  CMakeLists.txt  Log.cpp  compile.sh  imgui.ini
lada_engine/: CMakeLists.txt
lada_engine/src/: Core.cpp  Core.h  LADA.h  lada.cpp  lada.h  ldpch.h
lada_engine/src/app/: Application.cpp  Application.h  ApplicationBase.cpp  ApplicationBase.h  DebugUIManager.cpp  DebugUIManager.h  EntryPoint.cpp  EntryPoint.h  GlCall.cpp  GlCall.h  Log.cpp  Log.h  Logger.cpp  Logger.h  MetalTest.h  MetalTest.mm  Window.cpp  Window.h
lada_engine/src/app/ecs/: ComponentArray.cpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  ECSUtils.h  EcsCoordinator.cpp  EcsCoordinator.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h
lada_engine/src/app/input/: GLFWInput.cpp  Input.h  KeyCodes.h  MouseCodes.h
lada_engine/src/app/layer/: Layer.cpp  Layer.h  LayerContext.cpp  LayerContext.h  LayerStack.cpp  LayerStack.h
lada_engine/src/assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  IAsset.h  Mesh.cpp  Mesh.h
lada_engine/src/core/: UUID.cpp  UUID.h
lada_engine/src/events/: ApplicationEvent.h  Event.h  EventBus.h  EventManager.h  IEventListener.h  KeyEvent.h  MouseEvent.h
lada_engine/src/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
lada_engine/src/platform/glfw/: GlfwWindow.cpp  GlfwWindow.h
lada_engine/src/platform/opengl/: OpenGLContext.cpp  OpenGLContext.h  OpenGLSwapChain.cpp  OpenGLSwapChain.h
lada_engine/src/platform/vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanExtensionsManager.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h
lada_engine/src/platform/vulkan/buffers/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanStagingBuffer.cpp  VulkanStagingBuffer.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
lada_engine/src/platform/vulkan/commands/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h
lada_engine/src/platform/vulkan/device/: VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanSurface.cpp  VulkanSurface.h
lada_engine/src/platform/vulkan/pipeline/: VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderCollection.cpp  VulkanShaderCollection.h  VulkanShaderCompiler.cpp  VulkanShaderCompiler.h
lada_engine/src/render/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
lada_engine/src/renderer/: Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DeprecatedMesh.cpp  DeprecatedMesh.h  GlobalUBO.h  GraphicsApiFactory.cpp  GraphicsApiFactory.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  RenderStatus.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  SwapChain.cpp  SwapChain.h  Uniforms.h
lada_engine/src/renderer/buffers/: DeprecatedVertexBuffer.cpp  DeprecatedVertexBuffer.h  DepricatedVertexBufferLayout.h  IIndexBuffer.cpp  IIndexBuffer.h  IStagingBuffer.h  IUniformBuffer.h  IVertexBuffer.h  IndexBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferElement.cpp  VertexBufferElement.h  VertexBufferLayout.cpp  VertexBufferLayout.h
lada_engine/src/renderer/material/: Material.cpp  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
lada_engine/src/renderer/model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
lada_engine/src/scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h
lada_engine/src/util/: KeyCodes.h  MouseCodes.h
lada_sandbox/: CMakeLists.txt
lada_sandbox/res/materials/: basic.material.yaml  basic.yaml
lada_sandbox/res/shaders/: Basic.glsl  basic.frag  basic.vert
lada_sandbox/src/: ContextVars.h  DemoApp.cpp  DemoApp.h  DemoContext.h  DemoImGuiLayer.cpp  DemoImGuiLayer.h  RendererLayer.cpp  RendererLayer.h  RenderingLayer.cpp  RenderingLayer.h  main.cpp
svarozhich/: CMakeLists.txt  lighting_nodes.md
svarozhich/resources/: main.qrc
svarozhich/src/: MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.ui  utils.h
svarozhich/src/app/: MainWindow.cpp  MainWindow.h  mainwindow.ui
svarozhich/src/components/: CollapsibleSection.cpp  CollapsibleSection.h  DisclosureButton.cpp  DisclosureButton.h
svarozhich/src/editor_core/commands/: CreateEntityCommand.cpp  CreateEntityCommand.h  ICommand.h
svarozhich/src/engine_core/ecs/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
svarozhich/src/engine_core/events/: EventBus.cpp  EventBus.h
svarozhich/src/inspector/: CameraComponentWidget.cpp  CameraComponentWidget.h  InspectorWidget.cpp  InspectorWidget.h  MeshComponentWidget.cpp  MeshComponentWidget.h  TransformComponentWidget.cpp  TransformComponentWidget.h  cameracomponentwidget.ui  inspectorwidget.ui  meshcomponentwidget.ui  transformcomponentwidget.ui
svarozhich/src/materials/: NodeEditorWidget.cpp  NodeEditorWidget.h  ShaderGraphModel.cpp  ShaderGraphModel.h  model.md  nodeeditorwidget.ui
svarozhich/src/model/: Component.h  Entity.cpp  Entity.h  Math.h  Project.cpp  Project.h  Shader.cpp  Shader.h
svarozhich/src/model/shader/: NodeElement.cpp  NodeElement.h  NodesFactory.cpp  NodesFactory.h  lights_in_nodes.md  operations.h
svarozhich/src/scene/: SceneHierarchyWidget.cpp  SceneHierarchyWidget.h  SceneTreeModel.cpp  SceneTreeModel.h  scenehierarchywidget.ui
(+38 files in other folders)
